# imagic

./: .dockerignore  .gitignore  BUILD_MACOS.md  DEVLOG.md  DEV_LOG.md  Dockerfile  MAC_BUILD_v032.md  README.md  WEB_APP_CONCEPT.txt  fly.toml  launch_imagic.pyw  project_structure.json  pyproject.toml  requirements.txt  run_website.py
.github/agents/: analytics.agent.md  cto.agent.md  docs.agent.md  marketing.agent.md  qa.agent.md  scout.agent.md  security.agent.md  seo.agent.md  support.agent.md
.github/workflows/: daily-seo.yml  fly-deploy.yml  pre-release-security.yml  weekly-audit.yml  weekly-scout.yml
assets/: imagic.code-workspace
assets/icons/: .gitkeep
assets/styles/: dark.qss
config/: default_config.yaml  logging.yaml
config/profiles/: balanced.pp3  bright_outdoor.pp3  high_contrast.pp3  low_light.pp3  portrait.pp3
packaging/: EULA.txt  README.md  fetch_rawtherapee_payload.py  rawtherapee-manifest.json  rthook_ssl_certs.py
packaging/linux/: README.md  build-desktop.sh
packaging/macos/: README.md  build-desktop.sh  entitlements.plist  generate_dmg_background.py
packaging/windows/: README.md  build-desktop.ps1  generate_branding_assets.py  imagic-installer.iss  imagic.spec  rthook_pyqt6.py
src/imagic/: __init__.py  main.py
tests/: conftest.py  smoke_test_fixes.py  test_ai_analyzers.py  test_cli_orchestrator.py  test_database.py  test_scanner.py  test_task_queue.py  test_version_consistency.py
website/: AUTH_SETUP.md  __init__.py  requirements.txt
website/api/: __init__.py  account_store.py  blog_posts.py  blog_posts_batch1.py  main.py  (+4 more)
(+99 files in other folders)
